sumo/tests/duarouter/errors/no_output/errors.duarouter.exe
Error: No output specified.
Quitting (on error).
